--- a/src/app/layout/main-panel/work-panel/tool/bias-analysis/backtest/bias-analysis.backtest.html
+++ b/src/app/layout/main-panel/work-panel/tool/bias-analysis/backtest/bias-analysis.backtest.html
@@ -31,7 +31,7 @@
       <table class="table-style">
         <tr><td>{{loc('symbol')}}</td>      <td><b>{{response.brokerProduct?.symbol}}</b></td></tr>
         <tr><td>{{loc('name')}}</td>        <td><b>{{response.brokerProduct?.name}}</b></td></tr>
-        <tr><td>{{loc('costPerTrade')}}</td><td><b>{{response.brokerProduct?.costPerTrade}}</b> {{response.brokerProduct?.currencyCode}}</td></tr>
+        <tr><td>{{loc('costPerOperation')}}</td><td><b>{{response.brokerProduct?.costPerOperation}}</b> {{response.brokerProduct?.currencyCode}}</td></tr>
         <tr><td>{{loc('pointValue')}}</td>  <td><b>{{response.brokerProduct?.pointValue}}</b> {{response.brokerProduct?.currencyCode}}</td></tr>
       </table>
     </div>
