--- a/src/app/layout/main-panel/work-panel/inventory/product-broker/edit/product-broker.edit.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-broker/edit/product-broker.edit.html
@@ -2,14 +2,14 @@
   <right-title-panel icon="currency_exchange" title="{{loc('edit')}}" (onClose)="onClose()"></right-title-panel>
 
   <div class="form-layout">
-    <input-text-required   #pbNameCtrl         [label]="mod('name')"         [(value)]="pb.name"         [len]="64"></input-text-required><br/>
-    <input-number-required #pbPointValueCtrl   [label]="mod('pointValue')"   [(value)]="pb.pointValue"   [min]="0"></input-number-required><br/>
-    <input-number-required #pbCostPerTradeCtrl [label]="mod('costPerTrade')" [(value)]="pb.costPerTrade" [min]="0"></input-number-required><br/>
-    <input-number-required #pbMarginValueCtrl  [label]="mod('marginValue')"  [(value)]="pb.marginValue"  [min]="0"></input-number-required><br/>
-    <input-number-required #pbIncrementCtrl    [label]="mod('increment')"    [(value)]="pb.increment"    [min]="0.00000001" [max]="1"></input-number-required><br/>
-    <select-text-required  #pbMarketCtrl       [label]="mod('marketType')"   [(key)]  ="pb.marketType"  [map]="markets"></select-text-required><br/>
-    <select-text-required  #pbProductCtrl      [label]="mod('productType')"  [(key)]  ="pb.productType" [map]="products"></select-text-required><br/>
-    <select-text-required  #pbExchangeCtrl     [label]="mod('exchangeCode')" [(key)]  ="pb.exchangeId"  keyField="id" valueField="code" [list]="exchanges"></select-text-required>
+    <input-text-required   #pbNameCtrl         [label]="mod('name')"             [(value)]="pb.name"             [len]="64"></input-text-required><br/>
+    <input-number-required #pbPointValueCtrl   [label]="mod('pointValue')"       [(value)]="pb.pointValue"       [min]="0"></input-number-required><br/>
+    <input-number-required #pbCostPerOperCtrl  [label]="mod('costPerOperation')" [(value)]="pb.costPerOperation" [min]="0"></input-number-required><br/>
+    <input-number-required #pbMarginValueCtrl  [label]="mod('marginValue')"      [(value)]="pb.marginValue"      [min]="0"></input-number-required><br/>
+    <input-number-required #pbIncrementCtrl    [label]="mod('increment')"        [(value)]="pb.increment"        [min]="0.00000001" [max]="1"></input-number-required><br/>
+    <select-text-required  #pbMarketCtrl       [label]="mod('marketType')"       [(key)]  ="pb.marketType"       [map]="markets"></select-text-required><br/>
+    <select-text-required  #pbProductCtrl      [label]="mod('productType')"      [(key)]  ="pb.productType"      [map]="products"></select-text-required><br/>
+    <select-text-required  #pbExchangeCtrl     [label]="mod('exchangeCode')"     [(key)]  ="pb.exchangeId"       keyField="id" valueField="code" [list]="exchanges"></select-text-required>
   </div>
 
   <div class="buttons-layout">
