Minor changes and fixes

--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/filtering.panel.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/filtering.panel.html
@@ -112,6 +112,7 @@
         [dataLabels] = "equityChartOptions.dataLabels"
         [plotOptions]= "equityChartOptions.plotOptions"
         [stroke]     = "equityChartOptions.stroke"
+        [colors]     = "equityChartOptions.colors"
         [xaxis]      = "equityChartOptions.xaxis"
       ></apx-chart>
       <apx-chart
