--- a/src/app/component/panel/flex-table/flex-table.panel.html
+++ b/src/app/component/panel/flex-table/flex-table.panel.html
@@ -7,7 +7,7 @@
   <button mat-stroked-button [disabled]="true">{{rowCount}}</button>
 
   <button mat-icon-button (click)="reload()">
-    <mat-icon>refresh</mat-icon>
+    <span class="material-symbols-outlined">refresh</span>
   </button>
 </div>
 
@@ -35,10 +35,13 @@
   <ng-container [matColumnDef]="column.column" *ngFor="let column of tableColumns">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column.header}} </th>
     <td mat-cell *matCellDef="let element">
-      <mat-icon *ngIf="column.iconStyler"
-                fontIcon="{{column.iconStyler.getStyle(element[column.column], element).icon}}"
-                style="color:{{column.iconStyler.getStyle(element[column.column], element).color}}"
-      ></mat-icon>
+<!--      <mat-icon *ngIf="column.iconStyler"-->
+<!--                fontIcon="{{column.iconStyler.getStyle(element[column.column], element).icon}}"-->
+<!--                style="color:{{column.iconStyler.getStyle(element[column.column], element).color}}"-->
+<!--      ></mat-icon>-->
+      <span *ngIf="column.iconStyler" class="material-symbols-outlined" style="color:{{column.iconStyler.getStyle(element[column.column], element).color}}">
+        {{column.iconStyler.getStyle(element[column.column], element).icon}}
+      </span>
       <span *ngIf="column.transcoder">{{column.transcoder.transcode(element[column.column], element)}}</span>
       <span *ngIf="!column.transcoder && !column.iconStyler">{{element[column.column]}}</span>
     </td>
