--- a/src/app/component/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/component/sidebar-menu/sidebar-menu.component.html
@@ -2,8 +2,7 @@
   <ng-content></ng-content>
   <ul class="asm-menu__node">
     <ng-container *ngFor="let item of menu; trackBy: trackByItem">
-      <li
-        asm-menu-item
+      <li asm-menu-item
         class="asm-menu-item asm-menu-item--root"
         *ngIf="roleService.showItem$(item.roles) | async"
         [menuItem]="item"
