--- a/src/app/layout/header-panel/header-panel.html
+++ b/src/app/layout/header-panel/header-panel.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar">
   <button mat-icon-button class="example-icon" (click)="onMenuClick()">
-    <mat-icon>menu</mat-icon>
+    <span class="material-symbols-outlined">menu</span>
   </button>
 
   <span>{{loc('title')}}</span>
@@ -14,6 +14,6 @@
   </div>
 
   <button mat-icon-button class="example-icon">
-    <mat-icon>person</mat-icon>
+    <span class="material-symbols-outlined">account_circle</span>
   </button>
 </mat-toolbar>
