--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter.dialog.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter.dialog.scss
@@ -29,3 +29,9 @@ table tr td  {
 }
 
 //=============================================================================
+
+.field-to-optimize {
+  width: 300px;
+}
+
+//=============================================================================
