--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/progress.dialog.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/progress.dialog.html
@@ -10,7 +10,7 @@
         <td class="data-style">{{response?.currStep}}</td>
         <td class="separator-layout"></td>
         <td>{{loc("taOptimFor")}}</td>
-        <td class="data-style">{{response?.fieldToOptimize}}</td>
+        <td class="data-style">{{fieldToOptimize()}}</td>
         <td class="separator-layout"></td>
         <td>{{loc("taPosProfit")}}</td>
         <td>
