Added status filtering to trading systems

--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.panel.scss
@@ -19,6 +19,16 @@
 
 //=============================================================================
 
+.filters {
+  width: 900px;
+
+  mat-button-toggle-group {
+    margin-left: 8px;
+  }
+}
+
+//=============================================================================
+
 .table-panel {
   flex: 1 1 auto;
   overflow: auto;
