--- a/src/app/component/panel/flex-table/flex-table.panel.html
+++ b/src/app/component/panel/flex-table/flex-table.panel.html
@@ -1,8 +1,10 @@
 <div class="search-panel" *ngIf="searchPanel">
   <mat-form-field class="search-field">
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="...">
+    <input matInput (keyup)="updateFilter($event)" placeholder="...">
   </mat-form-field>
+
+  <ng-content></ng-content>
 
   <button mat-stroked-button [disabled]="true">{{rowCount}}</button>
 
@@ -60,7 +62,3 @@
     <td class="mat-cell" colspan=[displayedColumns.length]>{{loc("noData")}}</td>
   </tr>
 </table>
-
-<!--		<mat-paginator [pageSizeOptions]="[10, 25, 50, 100]"-->
-<!--		               showFirstLastButtons-->
-<!--		></mat-paginator>-->
